--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       margin-bottom:10px;
     }
     .sidebar-header .title{
-      font-weight:600; font-size:0.95rem; line-height:1.4;
-      color:var(--text);
+      font-weight:600; font-size:0.9rem; line-height:1.4;
+      color:var(--muted);
     }
     .sidebar-section{margin-bottom:20px;}
     .sidebar-section h4{
