--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       border:3px solid #e5e7eb;
       margin-bottom:10px;
     }
+    .sidebar-header .name{
+      font-weight:700; font-size:1.25rem; color:#111827; line-height:1.3; margin-bottom:4px;
+    }
     .sidebar-header .title{
       font-weight:600; font-size:0.9rem; line-height:1.4;
       color:var(--muted);
@@ -121,6 +124,11 @@
       .topnav{left:0;}
       .content{margin-left:0;width:100%;padding:90px 18px 40px}
     }
+
+    /* Projects */
+    .project-title{font-weight:700;color:#111827;margin-bottom:6px}
+    .project-meta{color:var(--muted);font-size:0.95rem;margin-bottom:8px}
+    .project-link{font-weight:600;color:var(--accent);font-size:0.95rem}
   </style>
 </head>
 <body>
@@ -130,6 +138,7 @@
     <aside class="sidebar">
       <div class="sidebar-header">
         <img class="photo" src="images/profile.jpg" alt="Elnaz Abbasifar">
+        <div class="name">Elnaz Abbasifar</div>
         <div class="title">
           M.Sc. in IT Management (Advanced Information Systems)<br>
           B.Sc. Computer Engineering (Software)
