--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
       font-weight:700; font-size:1.25rem; color:#111827; line-height:1.3; margin-bottom:4px;
     }
     .sidebar-header .title{
-      font-weight:600; font-size:0.9rem; line-height:1.4;
-      color:var(--muted);
+      font-size:0.9rem; color:var(--muted); line-height:1.4; margin:0 auto;
     }
     .sidebar-section{margin-bottom:20px;}
     .sidebar-section h4{
