--- a/index.html
+++ b/index.html
@@ -360,5 +360,13 @@
     AOS.init({once:true, duration:600});
   </script>
 
+  <script>
+    // Scroll to top on page load
+    window.addEventListener('load', () => {
+      window.scrollTo(0, 0);
+    });
+  </script>
+
+
 </body>
 </html>
