--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       left:0; top:0; bottom:0;
       overflow-y:auto;
       border-right:1px solid #d1d5db;
+      color:var(--text);
     }
     .sidebar-header{text-align:center;margin-bottom:20px;}
     .sidebar-header .photo{
@@ -137,6 +138,7 @@
         flex-wrap: nowrap;
         overflow-x: auto;
         padding: 10px 15px;
+        position:relative;
       }
       .topnav a {
         flex: 0 0 auto;
