--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
       left:0; top:0; bottom:0;
       overflow-y:auto;
       border-right:1px solid #d1d5db;
-      color:var(--text);
     }
     .sidebar-header{text-align:center;margin-bottom:20px;}
     .sidebar-header .photo{
@@ -134,11 +133,12 @@
         margin: 0;
         padding: 15px;
       }
-      .topnav {
-        flex-wrap: nowrap;
-        overflow-x: auto;
-        padding: 10px 15px;
-        position:relative;
+      .topnav{
+        position:relative; 
+        left:0; top:0; width:100%; 
+        padding:12px 18px; 
+        border-bottom:1px solid #d1d5db; 
+        overflow-x:auto;
       }
       .topnav a {
         flex: 0 0 auto;
