--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     }
     .sidebar-section ul{list-style:none;padding:0;margin:0;}
     .sidebar-section ul li{margin-bottom:8px;font-size:0.9rem;color:var(--text);}
+    .sidebar-section ul li a{color:#4b5563;text-decoration:none;}
+    .sidebar-section ul li a:hover{color:var(--accent);text-decoration:underline;}
 
     /* ---------- Top Navbar ---------- */
     .topnav{
