--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
     /* ---------- Mobile adjustments ---------- */
     @media (max-width: 900px){
       .layout {
-        flex-direction: column; /* موبایل: بالا به پایین */
+        flex-direction: column; /* mobile: up to down */
       }
       .sidebar, .topnav, .content {
         width: 100%;
-        position: relative !important; /* override fixed دسکتاپ */
+        position: relative !important; /* override fixed desktop */
         margin: 0;
         padding: 15px;
       }
@@ -202,7 +202,7 @@
       <section id="about" data-aos="fade-up">
         <h2 class="section-title">About Me</h2>
         <div class="card">
-          <p>Hello! I’m <strong>Elnaz Abbasifar</strong>, passionate about <b>Machine Learning, Data Science, and Health Informatics</b>.  
+          <p>Hello! I’m <strong>Elnaz Abbasifar</strong>, a PhD applicant passionate about <b>Machine Learning, Data Science, and Health Informatics</b>.  
           I enjoy working on real-world problems where data and algorithms intersect with human needs.</p>
           <p>Beyond academics, I love engaging in collaborative projects, exploring new technologies, and maintaining a dynamic and active lifestyle — qualities that keep me motivated and adaptable in every challenge.</p>
         </div>
