--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Elnaz Abbasifar — Portfolio</title>
+  <title>Elnaz Abbasifar</title>
 
   <!-- AOS CSS -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -210,7 +210,7 @@
 
       <!-- Academic -->
       <section id="academic" data-aos="fade-up">
-        <h2 class="section-title">Academic Background & Training</h2>
+        <h2 class="section-title">Academic Training</h2>
         <div class="card">
           <ul class="clean">
             <li><strong>Artificial Intelligence Autumn School</strong>, Amirkabir University of Technology, Iran (2021)</li>
