--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     .sidebar-section{margin-bottom:20px;}
     .sidebar-section h4{
       font-size:0.9rem; font-weight:600; color:#111827;
-      border-bottom:1px solid #d1d5db; padding-bottom:6px; margin-bottom:15px;
+      border-bottom:1px solid #d1d5db; padding-bottom:6px; margin-bottom:25px;
     }
     .sidebar-section ul{list-style:none;padding:0;margin:0;}
     .sidebar-section ul li{margin-bottom:8px;font-size:0.9rem;color:var(--text);}
@@ -214,6 +214,7 @@
         <div class="card">
           <ul class="clean">
             <li><strong>Artificial Intelligence Autumn School</strong>, Amirkabir University of Technology, Iran (2021)</li>
+            <li><strong>Stanford Graph Learning Workshop</strong>, Stanford University (2021)</li>
             <li><strong>Resource-Aware Machine Learning</strong>, TU Dortmund University, Germany (2020)</li>
             <li><strong>Security of Things (SeThi 2020)</strong>, University of Rostock, Germany (2020)</li>
             <li><strong>Lviv Data Science Summer School</strong>, Ukrainian Catholic University, Ukraine (2020)</li>
