--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     .sidebar-header .title{
       font-size:0.9rem; color:var(--muted); line-height:1.4; margin:0 auto;
     }
-    .sidebar-section{margin-bottom:20px;}
+    .sidebar-section{margin-bottom:30px;}
     .sidebar-section h4{
       font-size:0.9rem; font-weight:600; color:#111827;
-      border-bottom:1px solid #d1d5db; padding-bottom:16px; margin-bottom:10px;
+      border-bottom:1px solid #d1d5db; padding-bottom:6px; margin-bottom:10px;
     }
     .sidebar-section ul{list-style:none;padding:0;margin:0;}
     .sidebar-section ul li{margin-bottom:8px;font-size:0.9rem;color:var(--text);}
@@ -215,8 +215,8 @@
           <ul class="clean">
             <li><strong>Artificial Intelligence Autumn School</strong>, Amirkabir University of Technology, Iran (2021)</li>
             <li><strong>Stanford Graph Learning Workshop</strong>, Stanford University (2021)</li>
-            <li><strong>Resource-Aware Machine Learning</strong>, TU Dortmund University, Germany (2020)</li>
-            <li><strong>Security of Things (SeThi 2020)</strong>, University of Rostock, Germany (2020)</li>
+            <li><strong>Resource-Aware Machine Learning- 5th International Summer School</strong>, TU Dortmund University, Germany (2020)</li>
+            <li><strong>Summer School Security of Things</strong>, University of Rostock, Germany (2020)</li>
             <li><strong>Lviv Data Science Summer School</strong>, Ukrainian Catholic University, Ukraine (2020)</li>
           </ul>
         </div>
