--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       }
       .topnav{
         position:relative; 
-        left:0; top:0; width:auto; 
+        left:0; top:0; width:100%; 
         padding:12px 18px; 
         border-bottom:1px solid #d1d5db; 
         overflow-x:auto;
