--- a/index.html
+++ b/index.html
@@ -407,9 +407,12 @@
       });
     });
   </script>
-
-</body>
-
+  <script>
+    // autoplay certificates carousel
+    setInterval(() => {
+      nextCert();
+    }, 4000); // every 4 second
+  </script>
 
 </body>
 </html>
