--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
       <!-- Academic -->
       <section id="academic" data-aos="fade-up">
-        <h2 class="section-title">Academic Training</h2>
+        <h2 class="section-title">Advanced Academic Training</h2>
         <div class="card">
           <ul class="clean">
             <li><strong>Artificial Intelligence Autumn School</strong>, Amirkabir University of Technology, Iran (2021)</li>
